--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,3 +3,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/htdb
 spring.datasource.username=htuser
 spring.datasource.password=htpass
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wellcomhobbytogether@gmail.com
+spring.mail.password=dyuwbkdjrtwaxinx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
