Revert "Hobby Form / view (진행 중)"
This reverts commit d543a378

--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -15,7 +15,6 @@
     "font-awesome": "^4.7.0",
     "jdenticon": "^2.2.0",
     "jquery": "^3.4.1",
-    "jquery-cropper": "^1.0.1",
-    "summernote": "^0.8.16"
+    "jquery-cropper": "^1.0.1"
   }
 }
